# polkadot-child-safety-protocol

./: .env.example  .gitignore  .storybook-template.md  ACCEPTANCE_CRITERIA.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  TESTING_GUIDE.md  UI_README.md  jest.config.js  package.json  tsconfig.json
app/: README.md  package.json
contracts/: Cargo.toml  README.md
demo-site/: .gitignore  README.md  TEST_SUMMARY.md  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
demo-site/__tests__/components/: EventsLog.test.tsx  GuardianPanel.test.tsx  RegistryPanel.test.tsx  SimulatePanel.test.tsx
demo-site/components/: EventsLog.tsx  GuardianPanel.tsx  Header.tsx  RegistryPanel.tsx  SimulatePanel.tsx  Toast.tsx
demo-site/context/: DemoState.tsx
demo-site/hooks/: useMockContracts.ts
demo-site/pages/: _app.tsx  _document.tsx  about.tsx  demo.tsx  index.tsx
demo-site/styles/: globals.css
docs/: README.md  api.md  contracts.md  demo-guide.md
guardian_policy/: Cargo.toml  lib.rs
public/: index.html
scripts/: seed-demo.sh  setup-demo.sh  start-all.sh  stop-all.sh
src/: App.tsx  setupTests.ts
src/components/: ActivityLog.tsx  AddGuardianForm.tsx  ChildIdentityOverview.tsx  CreateChildForm.tsx  FormInput.tsx  FormSelect.tsx  GuardianDashboard.tsx  GuardianManagement.tsx  NotificationFeed.tsx  index.ts
src/hooks/: index.ts  useForm.ts  useNotifications.ts
src/services/: api.ts  index.ts  notifications.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: index.ts  validation.ts
(+11 files in other folders)
